--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
-
 [tool.uv]
 index = [
     { name = "pytorch-nightly", url = "https://download.pytorch.org/whl/nightly/cu128", explicit = true },
+]
+required-environments = [
+    "sys_platform == 'linux' and platform_machine == 'x86_64'",
 ]
 override-dependencies = [
     "torch>=2.7.0.dev",
